a different possible fix for stretched images on mobile

--- a/style.scss
+++ b/style.scss
@@ -151,11 +151,11 @@ h1  {
 }
 
 .hero {
-    width: 100%;
+    flex-basis: 100%;
 }
 
 img {
-    width: 25%;
+    flex-basis: 25%;
     height: auto;
     border: 4px solid black;
 }
